CreateRequest so that it allows dir
